syntax = "proto3";

package api.user.interface.v1;

import "google/api/annotations.proto";

option go_package = "api/user/interface/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.interface.v1";

service UserInterface {
  rpc Register(RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post : "/v1/user/register"
      body : "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post : "/v1/user/login"
      body : "*"
    };
  }

  rpc Logout(LogoutRequest) returns (LogoutReply) {
    option (google.api.http) = {
      post : "/v1/user/logout"
      body : "*"
    };
  }
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterReply { int64 id = 1; }

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply { string token = 1; }

message LogoutRequest {}

message LogoutReply {}
